lythrum/core/authentik/authentik.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-http
  namespace: authentik
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_AUTHENTIK}.${DOMAIN_EXTERNAL}`)
      middlewares:
        - name: redirect-https
          namespace: traefik
      services:
        - name: noop@internal
          kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-https
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: something.test.local
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`${SUBDOMAIN_AUTHENTIK}.${DOMAIN_EXTERNAL}`)
      services:
        - name: authentik-server
          port: 80
  tls:
    secretName: authentik-tls
